<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".AyudaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ayuda"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/image_atras"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_descripcion"
                android:padding="8dp"
                android:src="@drawable/ic_atras" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_inicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:onClick="onClick"
        android:text="@string/ayuda_inicio"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ayuda" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_vista"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:onClick="onClick"
        android:text="@string/ayuda_vista"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/button_inicio"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ayuda" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_busqueda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/background"
        android:onClick="onClick"
        android:text="@string/ayuda_busqueda"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button_nota"
        app:layout_constraintStart_toEndOf="@+id/button_vista"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ayuda" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_nota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/background"
        android:onClick="onClick"
        android:text="@string/ayuda_nota"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_ayuda" />

    <FrameLayout
        android:id="@+id/contenedor_ayuda"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_inicio">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>